--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                 </div>
                                 <img src="Img/ab67616d00001e02f000fdbe92e9a1058034fd33.jpg" alt="">
                             </div>
-                            <a href="#">Happy Bhag Jayegi</a>
+                            <a href="#">Sanam Teri Kasam</a>
                             <span>
                                 <a href="#">Himesh Reshammiya</a>,
                                 <a href="#">Sameer Anjaan</a>,
