--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <meta name="description"
         content="Siphan's here: A Spotify-Inspired Music Streaming Platform. Features: Responsive Web Player, Dynamic Playlists, and Artist Exploration. Built for Web Dev Practice!">
+<link rel="shortcut icon" href="favicon.ico">
     <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
 </head>
